--- a/index.html
+++ b/index.html
@@ -4,39 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>👨‍💻 Guigui Cab</title>
+    <title>👨‍💻 Guillaume Cabanel</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
+    <meta name="twitter:image:src" content="https://guigui.cab/meta_image.webp">
+    <meta name="twitter:site" content="@guillaumecabanel">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Guillaume Cabanel">
+    <meta name="twitter:description" content="Profil de Guillaume Cabanel">
+
+    <meta property="og:image" content="https://guigui.cab/meta_image.webp">
+    <meta property="og:image:alt" content="Guillaume Cabanel">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
+    <meta property="og:site_name" content="Guillaume Cabanel">
+    <meta property="og:title" content="Guillaume Cabanel">
+    <meta property="og:url" content="https://guigui.cab">
+    <meta property="og:description" content="Profil de Guillaume Cabanel">
   </head>
   <body>
     <section class="bg-blue-500 min-h-screen md:flex items-center justify-center">
       <article class="md:flex md:h-64 md:shadow-2xl p-4 md:p-0">
         <aside class="md:h-64">
-          <img src="https://res.cloudinary.com/kuartz/image/upload/v1549207620/team/guillaume.jpg" alt="Portrait de Guillaume Cabanel" class="md:h-64">
+          <img src="/profile.webp" alt="Portrait de Guillaume Cabanel" class="md:h-64">
         </aside>
         <section class="bg-gray-900 px-8 py-4 md:py-10 text-gray-200">
           <h1 class="text-4xl font-semibold font-sans md:mb-2">
             Guillaume Cabanel
           </h1>
-          <a class="font-semibold text-base hover:underline hover:text-gray-500" href="https://kuartz.fr">Kuartz</a>
+          <a class="font-semibold text-base underline hover:text-gray-500" href="https://kuartz.fr">Kuartz</a>
           <div class="text-sm mt-2">
             <ul>
               <li>
-                Développeur Full Stack
+                👨‍💻 Développeur Full Stack
               </li>
               <li>
-                Enseignant au <span class="font-semibold">Wagon Nantes</span>
+                👨‍🏫 Enseignant au <span class="font-semibold">Wagon Nantes</span>
               </li>
             </ul>
             <p class="md:mt-2 text-gray-500">Nantes, Pays de la Loire, France</p>
           </div>
           <div class="text-xs mt-2 md:mt-4 text-gray-400 font-mono tracking-wide">
-            <a class="hover:underline hover:text-gray-100 mr-3" href="https://www.linkedin.com/in/guillaumecabanel/">LinkedIn</a>
-            <a class="hover:underline hover:text-gray-100 mr-3" href="https://www.github.com/guillaumecabanel/">GitHub</a>
-            <a class="hover:underline hover:text-gray-100" href="https://www.twitter.com/guicabanel/">Twitter</a>
+            <a class="underline hover:text-gray-100 mr-3" href="https://www.linkedin.com/in/guillaumecabanel/">LinkedIn</a>
+            <a class="underline hover:text-gray-100 mr-3" href="https://www.github.com/guillaumecabanel/">GitHub</a>
+            <a class="underline hover:text-gray-100" href="https://www.twitter.com/guicabanel/">Twitter</a>
           </div>
         </section>
       </article>
     </section>
-    <script src="app.js"></script>
   </body>
 </html>
