add mastodon link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="text-xs mt-2 md:mt-4 text-gray-400 font-mono tracking-wide">
             <a class="underline hover:text-gray-100 mr-3" href="https://www.linkedin.com/in/guillaumecabanel/">LinkedIn</a>
             <a class="underline hover:text-gray-100 mr-3" href="https://www.github.com/guillaumecabanel/">GitHub</a>
-            <a class="underline hover:text-gray-100" href="https://www.twitter.com/guicabanel/">Twitter</a>
+            <a class="underline hover:text-gray-100" rel="me" href="https://ruby.social/@guicab">Mastodon</a>
           </div>
         </section>
       </article>
